Fixed all issues
