# src/main/java/com/company/summative1/controller/MagicController.java
@@ -1,9 +1,8 @@
 package com.company.summative1.controller;
 
 import com.company.summative1.model.Answer;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.http.HttpStatus;
+import org.springframework.web.bind.annotation.*;
 
 import java.util.Random;
 
@@ -13,45 +12,45 @@ import java.util.List;
 // Magic 8 Ball controller
 @RestController
 public class MagicController {
-    private List<String> possibleAnswers = Arrays.asList(
-            "It is certain.",
-            "It is decidedly so.",
-            "Without a doubt.",
-            "Yes, definitely.",
-            "You may rely on it.",
-            "As I see it, yes.",
-            "Most likely.",
-            "Outlook good.",
-            "Yes.",
-            "Signs point to yes.",
-            "Reply hazy, try again.",
-            "Ask again later.",
-            "Better not tell you now.",
-            "Cannot predict now.",
-            "Concentrate and ask again.",
-            "Don't count on it.",
-            "My reply is no.",
-            "My sources say no.",
-            "Outlook not so good.",
-            "Very doubtful."
-    );
-
-    @PostMapping("/magic")
-    public  Answer getMagicAnswer(@RequestBody Answer question) {
-        String randomAnswer = getRandomAnswer();
-        Random rand = new Random();
-        int int_random = rand.nextInt(100);
-        //Answer answer = new Answer();
-        question.setId((long) int_random);
-        question.setQuestion(question.getQuestion());
-        question.setAnswer(randomAnswer);
-        return question;
+    private List<Answer> possibleAnswers;
+    public static int idCounter = 0;
+     public MagicController(){
+         Answer ans1 = new Answer(idCounter++,"It is certain.");
+         Answer ans2 = new Answer(idCounter++,"It is decidedly so.");
+         Answer ans3 = new Answer(idCounter++, "Without a doubt.");
+         Answer ans4 = new Answer(idCounter++,"Yes, definitely.");
+         Answer ans5 = new Answer(idCounter++,"You may rely on it.");
+         Answer ans6 = new Answer(idCounter++,"As I see it, yes.");
+         Answer ans7 = new Answer(idCounter++, "Most likely.");
+         Answer ans8 = new Answer(idCounter++, "Outlook good.");
+         Answer ans9 = new Answer(idCounter++,"Yes.");
+         Answer ans10 = new Answer(idCounter++,"Signs point to yes.");
+         Answer ans11 = new Answer(idCounter++, "Reply hazy, try again.");
+         Answer ans12 = new Answer(idCounter++,  "Ask again later.");
+         Answer ans13 = new Answer(idCounter++,"Better not tell you now.");
+         Answer ans14 = new Answer(idCounter++, "Better not tell you now.");
+         Answer ans15 = new Answer(idCounter++,"Cannot predict now.");
+         Answer ans16 = new Answer(idCounter++,"Concentrate and ask again.");
+         Answer ans17 = new Answer(idCounter++,"Don't count on it.");
+         Answer ans18 = new Answer(idCounter++, "My reply is no.");
+         possibleAnswers = Arrays.asList(ans1,ans2,ans3,ans4,ans5,ans6,ans7,ans8,ans9,ans10,ans11,ans12,ans13,ans14,ans15,ans16,ans17,ans18);
+     }
+    @RequestMapping(value = "/magic", method = RequestMethod.GET)
+    @ResponseStatus(HttpStatus.OK)
+    public  Answer getMagicAnswer() {
+        Random random = new Random();
+        Answer answer = possibleAnswers.get(random.nextInt(possibleAnswers.size()));
+        answer.setQuestion("");
+        return answer;
     }
 
-    private String getRandomAnswer() {
+    @RequestMapping(value = "/magic/{ques}", method = RequestMethod.GET)
+    @ResponseStatus(HttpStatus.OK)
+    public  Answer getMagicAnswer(@PathVariable String ques) {
         Random random = new Random();
-        int index = random.nextInt(possibleAnswers.size());
-        return possibleAnswers.get(index);
+        Answer answer = possibleAnswers.get(random.nextInt(possibleAnswers.size()));
+        answer.setQuestion(ques);
+        return answer;
     }
 
 }
