# src/main/java/com/company/summative1/model/Definition.java
@@ -1,10 +1,12 @@
 package com.company.summative1.model;
 
+import java.util.Objects;
+
 public class Definition {
 
-    int ID;
-    String word;
-    String definition;
+    private int ID;
+    private String word;
+    private String definition;
 
     public Definition(int ID, String word, String definition){
         this.ID = ID;
@@ -37,5 +39,26 @@ public class Definition {
         this.definition = definition;
     }
 
+    @Override
+    public boolean equals(Object o) {
+        if (this == o) return true;
+        if (o == null || getClass() != o.getClass()) return false;
+        Definition that = (Definition) o;
+        return ID == that.ID && Objects.equals(word, that.word) && Objects.equals(definition, that.definition);
+    }
+
+    @Override
+    public int hashCode() {
+        return Objects.hash(ID, word, definition);
+    }
+
+    @Override
+    public String toString() {
+        return "Definition{" +
+                "ID=" + ID +
+                ", word='" + word + '\'' +
+                ", definition='" + definition + '\'' +
+                '}';
+    }
 }
 
